vendor/htslib/sam.h


typedef struct sam_hrecs_t sam_hrecs_t;
typedef struct sam_hdr_t {
  int32_t n_targets, ignore_sam_err;
  size_t l_text;
  uint32_t *target_len;
  const int8_t *cigar_tab HTS_DEPRECATED("Use bam_cigar_table[] instead");
  char **target_name;
  char *text;
  void *sdict;
  sam_hrecs_t *hrecs;
  uint32_t ref_count;
} sam_hdr_t;
#define BAM_CDIFF 8
#define BAM_CBACK 9
HTSLIB_EXPORT
extern const int8_t bam_cigar_table[256];
#define BAM_FPAIRED 1
#define BAM_FPROPER_PAIR 2
#define BAM_FUNMAP 4
#define BAM_FMUNMAP 8
#define BAM_FREVERSE 16
#define BAM_FMREVERSE 32
#define BAM_FREAD1 64
#define BAM_FREAD2 128
#define BAM_FSECONDARY 256
#define BAM_FQCFAIL 512
#define BAM_FDUP 1024
#define BAM_FSUPPLEMENTARY 2048
typedef struct bam1_core_t {
  hts_pos_t pos;
  int32_t tid;
  uint16_t bin; 
  uint8_t qual;
  uint8_t l_extranul;
  uint16_t flag;
  uint16_t l_qname;
  uint32_t n_cigar;
  int32_t l_qseq;
  int32_t mtid;
  hts_pos_t mpos;
  hts_pos_t isize;
} bam1_core_t;
typedef struct bam1_t {
  bam1_core_t core;
  uint64_t id;
  uint8_t *data;
  int l_data;
  uint32_t m_data;
  uint32_t mempolicy : 2, : 30 ;
} bam1_t;
HTSLIB_EXPORT
sam_hdr_t *sam_hdr_init(void);
HTSLIB_EXPORT
sam_hdr_t *bam_hdr_read(BGZF *fp);
HTSLIB_EXPORT
int bam_hdr_write(BGZF *fp, const sam_hdr_t *h) HTS_RESULT_USED;
HTSLIB_EXPORT
void sam_hdr_destroy(sam_hdr_t *h);
HTSLIB_EXPORT
sam_hdr_t *sam_hdr_dup(const sam_hdr_t *h0);
static inline sam_hdr_t *bam_hdr_init(void) { return sam_hdr_init(); }
static inline void bam_hdr_destroy(sam_hdr_t *h) { sam_hdr_destroy(h); }
static inline sam_hdr_t *bam_hdr_dup(const sam_hdr_t *h0) {
  return sam_hdr_dup(h0);
}
typedef htsFile samFile;
HTSLIB_EXPORT
sam_hdr_t *sam_hdr_parse(size_t l_text, const char *text);
HTSLIB_EXPORT
sam_hdr_t *sam_hdr_read(samFile *fp);
HTSLIB_EXPORT
int sam_hdr_write(samFile *fp, const sam_hdr_t *h) HTS_RESULT_USED;
HTSLIB_EXPORT
size_t sam_hdr_length(sam_hdr_t *h);
HTSLIB_EXPORT
const char *sam_hdr_str(sam_hdr_t *h);
HTSLIB_EXPORT
int sam_hdr_nref(const sam_hdr_t *h);
HTSLIB_EXPORT
int sam_hdr_add_lines(sam_hdr_t *h, const char *lines, size_t len);
HTSLIB_EXPORT
int sam_hdr_find_line_id(sam_hdr_t *h, const char *type, const char *ID_key,
                         const char *ID_val, kstring_t *ks);
HTSLIB_EXPORT
int sam_hdr_find_line_pos(sam_hdr_t *h, const char *type, int pos,
                          kstring_t *ks);
HTSLIB_EXPORT
int sam_hdr_remove_line_id(sam_hdr_t *h, const char *type, const char *ID_key,
                           const char *ID_value);
HTSLIB_EXPORT
int sam_hdr_remove_line_pos(sam_hdr_t *h, const char *type, int position);
HTSLIB_EXPORT
int sam_hdr_remove_except(sam_hdr_t *h, const char *type, const char *ID_key,
                          const char *ID_value);
HTSLIB_EXPORT
int sam_hdr_remove_lines(sam_hdr_t *h, const char *type, const char *id,
                         void *rh);
HTSLIB_EXPORT
int sam_hdr_count_lines(sam_hdr_t *h, const char *type);
HTSLIB_EXPORT
int sam_hdr_line_index(sam_hdr_t *bh, const char *type, const char *key);
HTSLIB_EXPORT
const char *sam_hdr_line_name(sam_hdr_t *bh, const char *type, int pos);
HTSLIB_EXPORT
int sam_hdr_find_tag_id(sam_hdr_t *h, const char *type, const char *ID_key,
                        const char *ID_value, const char *key, kstring_t *ks);
#define BAM_USER_OWNS_STRUCT 1
#define BAM_USER_OWNS_DATA 2
struct hts_filter_t;
typedef union {
  void *p;
  int64_t i;
  double f;
} bam_pileup_cd;
typedef struct bam_pileup1_t {
  bam1_t *b;
  int32_t qpos;
  int indel, level;
  uint32_t is_del : 1, is_head : 1, is_tail : 1, is_refskip : 1,
       : 1, aux : 27;
  bam_pileup_cd cd; 
  int cigar_ind;
} bam_pileup1_t;
struct bam_plp_s;
struct bam_mplp_s;
typedef struct hts_base_mod_state hts_base_mod_state;
enum htsRealnFlags {
  BAQ_APPLY = 1,
  BAQ_EXTEND = 2,
  BAQ_REDO = 4,
  BAQ_AUTO = 0 << 3,
  BAQ_ILLUMINA = 1 << 3,
  BAQ_PACBIOCCS = 2 << 3,
  BAQ_PACBIO = 3 << 3,
  BAQ_ONT = 4 << 3,
  BAQ_GENAPSYS = 5 << 3
};
typedef struct hts_base_mod {
  int modified_base;
  int canonical_base;
  int strand;
  int qual;
} hts_base_mod;
#define HTS_MOD_UNKNOWN -1   
#define HTS_MOD_UNCHECKED -2 
#define HTS_MOD_REPORT_UNCHECKED 1