hts_mojo/_ffi/sam.mojo


comptime BAM_CDIFF = c_int(8)

comptime BAM_CBACK = c_int(9)


comptime BAM_FPAIRED = c_int(1)

comptime BAM_FPROPER_PAIR = c_int(2)

comptime BAM_FUNMAP = c_int(4)

comptime BAM_FMUNMAP = c_int(8)

comptime BAM_FREVERSE = c_int(16)

comptime BAM_FMREVERSE = c_int(32)

comptime BAM_FREAD1 = c_int(64)

comptime BAM_FREAD2 = c_int(128)

comptime BAM_FSECONDARY = c_int(256)

comptime BAM_FQCFAIL = c_int(512)

comptime BAM_FDUP = c_int(1024)

comptime BAM_FSUPPLEMENTARY = c_int(2048)

comptime BAM_USER_OWNS_STRUCT = c_int(1)

comptime BAM_USER_OWNS_DATA = c_int(2)


comptime HTS_MOD_UNKNOWN = c_int(-1)

comptime HTS_MOD_UNCHECKED = c_int(-2)

comptime HTS_MOD_REPORT_UNCHECKED = c_int(1)

struct BGZF(Copyable, Movable):
    pass

struct htsFile(Copyable, Movable):
    pass

struct hts_idx_t(Copyable, Movable):
    pass

struct hts_itr_t(Copyable, Movable):
    pass

struct hts_reglist_t(Copyable, Movable):
    pass

struct kstring_t(Copyable, Movable):
    pass

struct sam_hrecs_t(Copyable, Movable):
    pass

@align(8)
@fieldwise_init
struct sam_hdr_t(TrivialRegisterPassable):
    var n_targets: int32_t
    var ignore_sam_err: int32_t
    var l_text: size_t
    var target_len: UnsafePointer[uint32_t, MutExternalOrigin]
    var cigar_tab: UnsafePointer[int8_t, ImmutExternalOrigin]
    var target_name: UnsafePointer[UnsafePointer[c_char, MutExternalOrigin], MutExternalOrigin]
    var text: UnsafePointer[c_char, MutExternalOrigin]
    var sdict: MutOpaquePointer[MutExternalOrigin]
    var hrecs: UnsafePointer[sam_hrecs_t, MutExternalOrigin]
    var ref_count: uint32_t

@align(8)
@fieldwise_init
struct bam1_core_t(TrivialRegisterPassable):
    var pos: hts_pos_t
    var tid: int32_t
    var bin: uint16_t
    var qual: uint8_t
    var l_extranul: uint8_t
    var flag: uint16_t
    var l_qname: uint16_t
    var n_cigar: uint32_t
    var l_qseq: int32_t
    var mtid: int32_t
    var mpos: hts_pos_t
    var isize: hts_pos_t

@align(8)
@fieldwise_init
struct bam1_t(Copyable, Movable):
    var core: bam1_core_t
    var id: uint64_t
    var data: UnsafePointer[uint8_t, MutExternalOrigin]
    var l_data: c_int
    var m_data: uint32_t
    var __pad0: InlineArray[UInt8, 8]

struct hts_filter_t(Copyable, Movable):
    pass

@align(8)
@fieldwise_init
struct bam_pileup1_t(Copyable, Movable):
    var b: UnsafePointer[bam1_t, MutExternalOrigin]
    var qpos: int32_t
    var indel: c_int
    var level: c_int
    var cd: bam_pileup_cd
    var cigar_ind: c_int

struct bam_plp_s(Copyable, Movable):
    pass

struct bam_mplp_s(Copyable, Movable):
    pass

struct hts_base_mod_state(Copyable, Movable):
    pass

@fieldwise_init
struct htsRealnFlags(Copyable, Movable, RegisterPassable):
    var value: c_uint
    comptime BAQ_APPLY = Self(c_uint(1))
    comptime BAQ_EXTEND = Self(c_uint(2))
    comptime BAQ_REDO = Self(c_uint(4))
    comptime BAQ_AUTO = Self(c_uint(0))
    comptime BAQ_ILLUMINA = Self(c_uint(8))
    comptime BAQ_PACBIOCCS = Self(c_uint(16))
    comptime BAQ_PACBIO = Self(c_uint(24))
    comptime BAQ_ONT = Self(c_uint(32))
    comptime BAQ_GENAPSYS = Self(c_uint(40))

@align(4)
@fieldwise_init
struct hts_base_mod(TrivialRegisterPassable):
    var modified_base: c_int
    var canonical_base: c_int
    var strand: c_int
    var qual: c_int

# global `bam_cigar_table` -> InlineArray[int8_t, 256]
comptime bam_cigar_table = GlobalVar[T=InlineArray[int8_t, 256], link="bam_cigar_table"]

def sam_hdr_init() abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["sam_hdr_init", UnsafePointer[sam_hdr_t, MutExternalOrigin]]()

def bam_hdr_read(fp: UnsafePointer[BGZF, MutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["bam_hdr_read", UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[BGZF, MutExternalOrigin]](fp)

def bam_hdr_write(fp: UnsafePointer[BGZF, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["bam_hdr_write", c_int, UnsafePointer[BGZF, MutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin]](fp, h)

def sam_hdr_destroy(h: UnsafePointer[sam_hdr_t, MutExternalOrigin]) abi("C") -> None:
    external_call["sam_hdr_destroy", NoneType, UnsafePointer[sam_hdr_t, MutExternalOrigin]](h)

def sam_hdr_dup(h0: UnsafePointer[sam_hdr_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["sam_hdr_dup", UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin]](h0)

def bam_hdr_init() abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["bam_hdr_init", UnsafePointer[sam_hdr_t, MutExternalOrigin]]()

def bam_hdr_destroy(h: UnsafePointer[sam_hdr_t, MutExternalOrigin]) abi("C") -> None:
    external_call["bam_hdr_destroy", NoneType, UnsafePointer[sam_hdr_t, MutExternalOrigin]](h)

def bam_hdr_dup(h0: UnsafePointer[sam_hdr_t, ImmutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["bam_hdr_dup", UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin]](h0)

def sam_hdr_parse(l_text: size_t, text: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["sam_hdr_parse", UnsafePointer[sam_hdr_t, MutExternalOrigin], size_t, UnsafePointer[c_char, ImmutExternalOrigin]](l_text, text)

def sam_hdr_read(fp: UnsafePointer[samFile, MutExternalOrigin]) abi("C") -> UnsafePointer[sam_hdr_t, MutExternalOrigin]:
    return external_call["sam_hdr_read", UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[samFile, MutExternalOrigin]](fp)

def sam_hdr_write(fp: UnsafePointer[samFile, MutExternalOrigin], h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_write", c_int, UnsafePointer[samFile, MutExternalOrigin], UnsafePointer[sam_hdr_t, ImmutExternalOrigin]](fp, h)

def sam_hdr_length(h: UnsafePointer[sam_hdr_t, MutExternalOrigin]) abi("C") -> size_t:
    return external_call["sam_hdr_length", size_t, UnsafePointer[sam_hdr_t, MutExternalOrigin]](h)

def sam_hdr_str(h: UnsafePointer[sam_hdr_t, MutExternalOrigin]) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["sam_hdr_str", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin]](h)

def sam_hdr_nref(h: UnsafePointer[sam_hdr_t, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_nref", c_int, UnsafePointer[sam_hdr_t, ImmutExternalOrigin]](h)

def sam_hdr_add_lines(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], lines: UnsafePointer[c_char, ImmutExternalOrigin], len: size_t) abi("C") -> c_int:
    return external_call["sam_hdr_add_lines", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], size_t](h, lines, len)


def sam_hdr_find_line_id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], ID_key: UnsafePointer[c_char, ImmutExternalOrigin], ID_val: UnsafePointer[c_char, ImmutExternalOrigin], ks: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_find_line_id", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin]](h, type, ID_key, ID_val, ks)

def sam_hdr_find_line_pos(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], pos: c_int, ks: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_find_line_pos", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int, UnsafePointer[kstring_t, MutExternalOrigin]](h, type, pos, ks)

def sam_hdr_remove_line_id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], ID_key: UnsafePointer[c_char, ImmutExternalOrigin], ID_value: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_remove_line_id", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, type, ID_key, ID_value)

def sam_hdr_remove_line_pos(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], position: c_int) abi("C") -> c_int:
    return external_call["sam_hdr_remove_line_pos", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int](h, type, position)


def sam_hdr_remove_except(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], ID_key: UnsafePointer[c_char, ImmutExternalOrigin], ID_value: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_remove_except", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, type, ID_key, ID_value)

def sam_hdr_remove_lines(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], id: UnsafePointer[c_char, ImmutExternalOrigin], rh: MutOpaquePointer[MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_remove_lines", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], MutOpaquePointer[MutExternalOrigin]](h, type, id, rh)

def sam_hdr_count_lines(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_count_lines", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](h, type)

def sam_hdr_line_index(bh: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], key: UnsafePointer[c_char, ImmutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_line_index", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](bh, type, key)

def sam_hdr_line_name(bh: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], pos: c_int) abi("C") -> UnsafePointer[c_char, ImmutExternalOrigin]:
    return external_call["sam_hdr_line_name", UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], c_int](bh, type, pos)

def sam_hdr_find_tag_id(h: UnsafePointer[sam_hdr_t, MutExternalOrigin], type: UnsafePointer[c_char, ImmutExternalOrigin], ID_key: UnsafePointer[c_char, ImmutExternalOrigin], ID_value: UnsafePointer[c_char, ImmutExternalOrigin], key: UnsafePointer[c_char, ImmutExternalOrigin], ks: UnsafePointer[kstring_t, MutExternalOrigin]) abi("C") -> c_int:
    return external_call["sam_hdr_find_tag_id", c_int, UnsafePointer[sam_hdr_t, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[kstring_t, MutExternalOrigin]](h, type, ID_key, ID_value, key, ks)
